crates/math-core/tests/snapshots/error_test__operatorname_with_end_after_begin.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{matrix}\\operatorname{\\end{matrix}}"
---
Position: 28
ExpectedArgumentGotClose
