crates/math-core/tests/snapshots/error_test__providecommand_unclosed_discarded_body.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\providecommand{\\frac}{1"
---
Error: Expected closing token "}", but reached end of input.
   ╭─[ <input>:1:25 ]
   │
 1 │ \providecommand{\frac}{1
   │                         │ 
   │                         ╰─ a group was never closed
───╯
