crates/math-core/tests/snapshots/error_test__providecommand_unknown_cmd_in_discarded_body.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\providecommand{\\frac}{\\asdf}"
---
Error: Unknown command "\asdf".
   ╭─[ <input>:1:24 ]
   │
 1 │ \providecommand{\frac}{\asdf}
   │                        ──┬──  
   │                          ╰──── unknown command
───╯
