crates/math-core/tests/snapshots/error_test__renewcommand_undefined_unbraced.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\renewcommand\\zzz{1}"
---
Error: This command is not defined.
   ╭─[ <input>:1:14 ]
   │
 1 │ \renewcommand\zzz{1}
   │              ──┬─  
   │                ╰─── not defined
───╯
