crates/math-core/tests/snapshots/error_test__renewcommand_without_command.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\renewcommand{x}{y}"
---
Error: Expected the name of a command.
   ╭─[ <input>:1:15 ]
   │
 1 │ \renewcommand{x}{y}
   │               ┬  
   │               ╰── expected a command name here
───╯
